--- a/src/Presentation.css
+++ b/src/Presentation.css
@@ -1,2 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:100,300,400,700,900');
 @import url('https://fonts.googleapis.com/css?family=Rubik:100,300,400,700,900');
+
+.code-slide > h1 {
+  font-size: 1.5em !important;
+}
